lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:10: error: lessons.lander.universe.Point does not take parameters
		if(L(i)(1)==L(i+1)(1))
                       ^Lander:12: error: lessons.lander.universe.Point does not take parameters
			limiteGauche = L(i)(0)
                                           ^Lander:13: error: lessons.lander.universe.Point does not take parameters
			limiteDroite = L(i+1)(0)
                                             ^Lander:17: error: Int does not take parameters
	if(limiteGauche < getX() && limiteDroite() > getX())
                                                ^Lander:20: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
			setPousseeDesiree(3)
                                         ^Lander:21: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
		else setPousseeDesiree(4)
                                      ^Lander:23: error: Int does not take parameters
	else if(limiteGauche < getX() && limiteDroite() < getX())
                                                     ^Lander:25: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
		setAngleDesire(90); setPousseeDesiree(3)
                                                     ^Lander:27: error: Int does not take parameters
	else if(limiteGauche > getX() && limiteDroite() > getX())
                                                     ^Lander:29: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
		setAngleDesire(-90); setPousseeDesiree(3)
                                                      ^Lander:27: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
	else if(limiteGauche > getX() && limiteDroite() > getX())
             ^